opam-version: "2.0"
name: "rtc_datachannel"
license: "MIT"
synopsis: "Meta-package for JS and unix implementations of webrtc datachannels"
description: "Meta-package for JS and unix implementations of webrtc datachannels"

depends: [
	"ocaml" {>= "4.5.0"}
	"dune" {>= "1.11"}
	"js_of_ocaml" {>= "3.0"}
	"js_of_ocaml-lwt"
	"js_of_ocaml-ppx"
	"lwt"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
